css/custom.css
h1 {
  text-align: center;
  font-size: 4.5em;
  margin-top: -6%;
  padding-bottom: 15px;
  font-family: 'Anonymous Pro', monospace;
  color: #145252;
  border-bottom: 2px #145252 solid;
}

img.logo {
  width: 50%;
  margin: auto;
}

.tracks img {
  margin: auto;
}

div.radio {
  line-height:2.3;
}

input.form-control {
  margin-top: 0;
}
li {
  box-sizing: border-box;
  font-size: 1.5em;
  padding-bottom: 10px;
  padding-left: 20px;
  list-style: none;
}
li.design {
  list-style:url("../img/design.png");
  background: #f2e6ff;
}
li.php {
  list-style:url("../img/php.png");
  background: #ffe6cc;
}
li.ruby {
  list-style:url("../img/ruby.png");
  background: #fcc;
}
li.java {
  list-style:url("../img/java.png");
  background: #e6ffe6;
}
li.csharp {
  list-style:url("../img/cs.png");
  background: #e6f7ff;
}

@media only screen and (max-width:991px) {
  h1 {
    font-size: 3em;
    text-align: right;
  }
  .tracks {
    display: none;
  }
}

@media only screen and (max-width:460px) {
  img.logo {
    width: 100%;
  }
  h1 {
    font-size: 2em;
    margin-top: -2%;
  }

}

